// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonSelect margin 1`] = `
<div>
  <div
    aria-expanded="false"
    class=""
    role="combobox"
  >
    <div
      class=""
    >
      
      <div
        class=""
      >
        <input
          aria-autocomplete="list"
          aria-describedby="test-helper-text"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class=""
          data-testid="common-select-input"
          id="test-select-input"
          placeholder=""
          spellcheck="false"
          type="text"
          value=""
        />
        <div>
          <button
            aria-label="Clear"
            class=""
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class=""
                data-testid="common-select-close-icon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class=""
            />
          </button>
          <button
            aria-label="Open"
            class=""
            tabindex="-1"
            title="Open"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class=""
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
            <span
              class=""
            />
          </button>
        </div>
      </div>
      <p
        class=""
        data-testid="common-select-helper-text"
        id="test-helper-text"
      >
        some helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`CommonSelect variant 1`] = `
<div>
  <div
    aria-expanded="false"
    class=""
    role="combobox"
  >
    <div
      class=""
    >
      
      <div
        class=""
      >
        <input
          aria-autocomplete="list"
          aria-describedby="test-helper-text"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class=""
          data-testid="common-select-input"
          id="test-select-input"
          placeholder=""
          spellcheck="false"
          type="text"
          value=""
        />
        <div>
          <button
            aria-label="Clear"
            class=""
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class=""
                data-testid="common-select-close-icon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class=""
            />
          </button>
          <button
            aria-label="Open"
            class=""
            tabindex="-1"
            title="Open"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class=""
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
            <span
              class=""
            />
          </button>
        </div>
      </div>
      <p
        class=""
        data-testid="common-select-helper-text"
        id="test-helper-text"
      >
        some helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`render creatable CommonSelect 1`] = `
<div>
  <div
    aria-expanded="false"
    class=""
    role="combobox"
  >
    <div
      class=""
    >
      
      <div
        class=""
      >
        <input
          aria-autocomplete="list"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class=""
          data-testid="common-select-input"
          id="select-input"
          placeholder=""
          spellcheck="false"
          type="text"
          value="test"
        />
        <div>
          <button
            aria-label="Clear"
            class=""
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class=""
                data-testid="common-select-close-icon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class=""
            />
          </button>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`render read-only CommonSelect with value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    Algeria
  </span>
</div>
`;

exports[`test disabled CommonSelect 1`] = `
<div>
  <div
    aria-expanded="false"
    class=""
    role="combobox"
  >
    <div
      class=""
    >
      
      <div
        class=""
      >
        <input
          aria-autocomplete="list"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class=""
          data-testid="common-select-input"
          disabled=""
          id="select-input-disabled"
          placeholder=""
          spellcheck="false"
          type="text"
          value=""
        />
        <div>
          <button
            aria-label="Open"
            class=""
            disabled=""
            tabindex="-1"
            title="Open"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class=""
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <p
        class=""
        data-testid="common-select-helper-text"
      >
        disabled
      </p>
    </div>
  </div>
</div>
`;
